Update renovate config

--- a/renovaterc.json5
+++ b/renovaterc.json5
@@ -4,14 +4,14 @@
     "config:recommended",
     "docker:enableMajor",
     "helpers:pinGitHubActionDigests",
-    "github>elcattivo66/home-ops//.github/renovate/autoMerge.json5",
-    "github>elcattivo66/home-ops//.github/renovate/commitMessage.json5",
-    "github>elcattivo66/home-ops//.github/renovate/customManagers.json5",
-    "github>elcattivo66/home-ops//.github/renovate/grafanaDashboards.json5",
-    "github>elcattivo66/home-ops//.github/renovate/groups.json5",
-    "github>elcattivo66/home-ops//.github/renovate/labels.json5",
-    "github>elcattivo66/home-ops//.github/renovate/packageRules.json5",
-    "github>elcattivo66/home-ops//.github/renovate/semanticCommits.json5",
+    "github>elcattivo66/home-ops//.renovate/autoMerge.json5",
+    "github>elcattivo66/home-ops//.renovate/commitMessage.json5",
+    "github>elcattivo66/home-ops//.renovate/customManagers.json5",
+    "github>elcattivo66/home-ops//.renovate/grafanaDashboards.json5",
+    "github>elcattivo66/home-ops//.renovate/groups.json5",
+    "github>elcattivo66/home-ops//.renovate/labels.json5",
+    "github>elcattivo66/home-ops//.renovate/packageRules.json5",
+    "github>elcattivo66/home-ops//.renovate/semanticCommits.json5",
     ":automergeBranch",
     ":disableRateLimiting",
     ":dependencyDashboard",
