--- a/kubernetes/apps/networking/multus/networks/iot.yaml
+++ b/kubernetes/apps/networking/multus/networks/iot.yaml
@@ -16,9 +16,12 @@ spec:
           "ipam": {
             "type": "static",
             "routes": [
-              { "dst": "192.168.30.0/24", "gw": "192.168.30.1" }
+              { "dst": "0.0.0.0/0", "gw": "192.168.30.1" }
             ]
           }
+        },
+        {
+          "type": "sbr"
         }
       ]
     }
