--- a/kubernetes/apps/databases/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/helmrelease.yaml
@@ -1,27 +1,35 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: cloudnative-pg
+spec:
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.24.0
+  url: oci://ghcr.io/cloudnative-pg/charts/cloudnative-pg
+  verify:
+    provider: cosign
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: cloudnative-pg
-  namespace: databases
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: cloudnative-pg
-      version: 0.24.0
-      sourceRef:
-        kind: HelmRepository
-        name: cloudnative-pg
-        namespace: flux-system
+  interval: 1h
+  chartRef:
+    kind: OCIRepository
+    name: cloudnative-pg
   install:
-    createNamespace: true
     remediation:
-      retries: 5
+      retries: -1
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
+      retries: 3
   dependsOn:
     - name: openebs
       namespace: openebs-system
