--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -1,19 +1,10 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
-# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubeVersion: v1.33.2
-
 helmDefaults:
-  force: true
-  recreatePods: true
-  timeout: 600
+  cleanupOnFail: true
   wait: true
   waitForJobs: true
-
-repositories:
-  - name: cilium
-    url: https://helm.cilium.io
 
 releases:
   - name: prometheus-operator-crds
@@ -23,46 +14,42 @@ releases:
 
   - name: cilium
     namespace: kube-system
-    chart: cilium/cilium
+    chart: oci://ghcr.io/home-operations/charts-mirror/cilium
     version: 1.17.5
-    values:
-      - ../../apps/kube-system/cilium/app/helm-values.yaml
-    needs:
-      - monitoring/prometheus-operator-crds
+    values: ['../../apps/kube-system/cilium/app/helm-values.yaml']
+    needs: ['monitoring/prometheus-operator-crds']
 
   - name: coredns
     namespace: kube-system
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.43.0
-    values:
-      - ../../apps/kube-system/coredns/app/helm-values.yaml
-    needs:
-      - kube-system/cilium
+    values: ['../../apps/kube-system/coredns/app/helm-values.yaml']
+    needs: ['kube-system/cilium']
 
   - name: spegel
     namespace: kube-system
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: 0.3.0
-    values:
-      - ../../apps/kube-system/spegel/app/helm-values.yaml
-    needs:
-      - kube-system/coredns
+    values: ['../../apps/kube-system/spegel/app/helm-values.yaml']
+    needs: ['kube-system/coredns']
+
+  - name: cert-manager
+    namespace: cert-manager
+    chart: oci://quay.io/jetstack/charts/cert-manager
+    version: v1.17.2
+    values: ['../../apps/cert-manager/cert-manager/app/helm-values.yaml']
+    needs: ['kube-system/spegel']
 
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.23.0
-    values:
-      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
-    needs:
-      - kube-system/coredns
+    values: ['../../apps/flux-system/flux-operator/app/helm-values.yaml']
+    needs: ['kube-system/coredns']
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.23.0
-    wait: false
-    values:
-      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
-    needs:
-      - flux-system/flux-operator
+    values: ['../../apps/flux-system/flux-operator/instance/helm-values.yaml']
+    needs: ['flux-system/flux-operator']
