--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -24,18 +24,9 @@ spec:
     kind: OCIRepository
     name: cert-manager
   install:
-    remediation:
-      retries: -1
+    crds: CreateReplace
   upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-  values:
-    crds:
-      enabled: true
-    dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
-    dns01RecursiveNameserversOnly: true
-    prometheus:
-      enabled: true
-      servicemonitor:
-        enabled: true
+    crds: CreateReplace
+  valuesFrom:
+    - kind: ConfigMap
+      name: cert-manager-helm-values
