--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
+  - ./actual/ks.yaml
   - ./adventurelog/ks.yaml
   - ./atuin/ks.yaml
   - ./audiobookshelf/ks.yaml
