--- a/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
@@ -1,26 +1,37 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: nextcloud
+spec:
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 7.0.0
+  url: oci://ghcr.io/nextcloud/helm/nextcloud
+---
+# yaml-language-server: $schema=https://github.com/fluxcd-community/flux2-schemas/raw/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app nextcloud
 spec:
+  timeout: 15m
   interval: 30m
-  chart:
-    spec:
-      chart: nextcloud
-      version: 6.6.10
-      sourceRef:
-        kind: HelmRepository
-        name: nextcloud
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: nextcloud
   install:
-    createNamespace: true
     remediation:
-      retries: 5
+      retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
+      strategy: rollback
+      retries: 3
   values:
     fullnameOverride: *app
     deploymentAnnotations:
@@ -70,6 +81,17 @@ spec:
           host: smtp-relay.default.svc.cluster.local
           secure: ""
           port: 2525
+      lifecycle:
+        postStartCommand:
+          - "/bin/sh"
+          - "-c"
+          - |
+            su -s /bin/sh www-data -c 'php occ maintenance:repair --include-expensive' || true
+            su -s /bin/sh www-data -c 'php occ files:scan --all' || true
+            su -s /bin/sh www-data -c 'php occ files:cleanup' || true
+            su -s /bin/sh www-data -c 'php occ db:add-missing-indices' || true
+            su -s /bin/sh www-data -c 'php occ db:add-missing-primary-keys' || true
+            su -s /bin/sh www-data -c 'php occ db:add-missing-columns' || true
       objectstore:
         s3:
           enabled: true
@@ -224,11 +246,12 @@ spec:
       enabled: false
 
     startupProbe:
-      enabled: false
-    livenessProbe:
-      enabled: false
-    readinessProbe:
-      enabled: false
+      enabled: true
+      initialDelaySeconds: 60
+      periodSeconds: 30
+      timeoutSeconds: 10
+      failureThreshold: 10
+      successThreshold: 1
 
     resources:
       requests:
