--- a/kubernetes/apps/databases/vernemq/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/vernemq/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
           app:
             image:
               repository: vernemq/vernemq
-              tag: 2.0.1-alpine
+              tag: 2.1.1-alpine@sha256:78f6ba747178e00c39b96f7cf7672b8f0f9fc593ffa584b0b34257f670095b89
             env:
               MY_POD_NAME:
                 valueFrom:
@@ -45,14 +45,14 @@ spec:
               DOCKER_VERNEMQ_ACCEPT_EULA: "yes"
               DOCKER_VERNEMQ_DISCOVERY_KUBERNETES: 1
               DOCKER_VERNEMQ_KUBERNETES_LABEL_SELECTOR: "app.kubernetes.io/name=vernemq"
-              DOCKER_VERNEMQ_LEVELDB__MAXIMUM_MEMORY: '10485760' # in bytes
-              DOCKER_VERNEMQ_LEVELDB__WRITE_BUFFER_SIZE_MIN: '1048576'
-              DOCKER_VERNEMQ_LEVELDB__WRITE_BUFFER_SIZE_MAX: '2097152'
+              DOCKER_VERNEMQ_LEVELDB__WRITE_BUFFER_SIZE_MIN: "2500000"
+              DOCKER_VERNEMQ_LEVELDB__WRITE_BUFFER_SIZE_MAX: "7500000"
+              DOCKER_VERNEMQ_LEVELDB__MAXIMUM_MEMORY: "128000000"
               # allow clients to failover when pods are restarting
-              DOCKER_VERNEMQ_ALLOW_REGISTER_DURING_NETSPLIT: 'on'
-              DOCKER_VERNEMQ_ALLOW_PUBLISH_DURING_NETSPLIT: 'on'
-              DOCKER_VERNEMQ_ALLOW_SUBSCRIBE_DURING_NETSPLIT: 'on'
-              DOCKER_VERNEMQ_ALLOW_UNSUBSCRIBE_DURING_NETSPLIT: 'on'
+              DOCKER_VERNEMQ_ALLOW_REGISTER_DURING_NETSPLIT: "on"
+              DOCKER_VERNEMQ_ALLOW_PUBLISH_DURING_NETSPLIT: "on"
+              DOCKER_VERNEMQ_ALLOW_SUBSCRIBE_DURING_NETSPLIT: "on"
+              DOCKER_VERNEMQ_ALLOW_UNSUBSCRIBE_DURING_NETSPLIT: "on"
             envFrom:
               - secretRef:
                   name: vernemq-auth-secret
@@ -87,7 +87,7 @@ spec:
                 cpu: 20m
                 memory: 128Mi
               limits:
-                memory: 256Mi
+                memory: 512Mi
             securityContext:
               allowPrivilegeEscalation: false
               capabilities:
