--- a/kubernetes/apps/default/ollama/app/helmrelease.yaml
+++ b/kubernetes/apps/default/ollama/app/helmrelease.yaml
@@ -28,36 +28,31 @@ spec:
           reloader.stakater.com/auto: "true"
         containers:
           app:
-            # command: ["/bin/sh"]
-            # args: ["-c", "sleep infinity"]
             image:
-              repository: ghcr.io/tyzbit/ollama-intel-gpu
-              tag: ipex-llm-v.0.0.1-2
+              repository: intelanalytics/ipex-llm-inference-cpp-xpu
+              tag: latest
+            command:
+              - /bin/sh
+              - -c
+              - mkdir -p /llm/ollama && cd /llm/ollama && init-ollama && exec ./ollama serve
             securityContext:
               privileged: true
               supplementalGroups: [44]
             env:
-              # --- Intel GPU
-              DEVICE: Arc
-              OLLAMA_MAX_LOADED_MODELS: "1"
-              OLLAMA_NUM_PARALLEL: "1"
-              OLLAMA_NUM_GPU: "1"
-              SYCL_CACHE_PERSITENT: "1"
-              # ---
-              TZ: ${TZ}
-              # OLLAMA_INTEL_GPU: "1" # doesn't work right now, experimental
-              HSA_OVERRIDE_GFX_VERSION: 11.0.1 # force to use graphics card
-              OLLAMA_HOST: 0.0.0.0
-              OLLAMA_ORIGINS: "*"
               OLLAMA_MODELS: &modelPath /models
-              OLLAMA_LOAD_TIMEOUT: "600"
-              OLLAMA_CONTEXT_LENGTH: "4096"
-              # OLLAMA_NUM_PARALLEL: "16"
+              # ONEAPI_DEVICE_SELECTOR: level_zero:0
+              # IPEX_LLM_NUM_CTX: 16384
+              no_proxy: localhost,127.0.0.1
+              OLLAMA_HOST: 0.0.0.0
+              DEVICE: Arc
+              OLLAMA_INTEL_GPU: true
+              OLLAMA_NUM_GPU: 999
+              ZES_ENABLE_SYSMAN: 1
             resources:
               requests:
                 cpu: 200m
               limits:
-                memory: 12Gi
+                memory: 16i
                 gpu.intel.com/i915: 1
         pod:
           nodeSelector:
