openwebui is internal

--- a/kubernetes/apps/default/open-webui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/open-webui/app/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
             port: &port 8080
     ingress:
       app:
-        className: external
+        className: internal
         hosts:
           - host: &host "chat.${SECRET_DOMAIN}"
             paths:
