--- a/kubernetes/apps/default/ollama/app/helmrelease.yaml
+++ b/kubernetes/apps/default/ollama/app/helmrelease.yaml
@@ -51,7 +51,7 @@ spec:
               requests:
                 cpu: 200m
               limits:
-                memory: 16i
+                memory: 16Gi
                 gpu.intel.com/i915: 1
         pod:
           nodeSelector:
