--- a/kubernetes/apps/default/tandoor/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tandoor/app/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
                 cpu: 10m
                 memory: 256Mi
               limits:
-                memory: 512Mi
+                memory: 1Gi
           nginx:
             image:
               repository: ghcr.io/nginxinc/nginx-unprivileged
