update volsync config

--- a/kubernetes/apps/default/nextcloud/ks.yaml
+++ b/kubernetes/apps/default/nextcloud/ks.yaml
@@ -10,7 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../components/volsync
+    - ../../../../components/volsync/local
+    - ../../../../components/volsync/remote
   dependsOn:
     - name: volsync
       namespace: volsync-system
