--- a/kubernetes/components/volsync/common/claim.yaml
+++ b/kubernetes/components/volsync/common/claim.yaml
@@ -4,8 +4,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: "${VOLSYNC_CLAIM:-${APP}}"
 spec:
-  accessModes:
-    - "${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"
+  accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
   dataSourceRef:
     kind: ReplicationDestination
     apiGroup: volsync.backube
