--- a/kubernetes/apps/default/audiobookshelf/ks.yaml
+++ b/kubernetes/apps/default/audiobookshelf/ks.yaml
@@ -10,7 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../components/volsync
+    - ../../../../components/volsync/local
+    - ../../../../components/volsync/remote
     - ../../../../components/keda/nfs-scaler
   dependsOn:
     - name: rook-ceph-cluster
