--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -11,7 +11,8 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   components:
-    - ../../../../components/volsync
+    - ../../../../components/volsync/local
+    - ../../../../components/volsync/remote
   dependsOn:
     - name: multus-networks
       namespace: networking
