--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../components/volsync/local
-    - ../../../../components/volsync/remote
+    # - ../../../../components/volsync/remote
   dependsOn:
     - name: multus-networks
       namespace: networking
