--- a/kubernetes/apps/default/vaultwarden/ks.yaml
+++ b/kubernetes/apps/default/vaultwarden/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *appname
   components:
     - ../../../../components/volsync/local
-    # - ../../../../components/volsync/remote
+    - ../../../../components/volsync/remote
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: databases
