--- a/kubernetes/talos/talconfig.yaml
+++ b/kubernetes/talos/talconfig.yaml
@@ -173,9 +173,15 @@ controlPlane:
         files:
           - op: create
             path: /etc/cri/conf.d/20-customization.part
-            content: |-
+            content: |
+              [plugins]
+                [plugins."io.containerd.grpc.v1.cri"]
+                  enable_unprivileged_ports = true
+                  enable_unprivileged_icmp = true
               [plugins."io.containerd.cri.v1.images"]
                 discard_unpacked_layers = false
+              [plugins."io.containerd.cri.v1.runtime"]
+                device_ownership_from_security_context = true
 
     # Disable search domain everywhere
     - |-
@@ -281,10 +287,13 @@ controlPlane:
     - |-
       machine:
         sysctls:
-          fs.inotify.max_user_instances: 8192    # Watchdog
-          fs.inotify.max_user_watches: 1048576   # Watchdog
-          net.core.rmem_max: 67108864            # Cloudflared / QUIC
-          net.core.wmem_max: 67108864            # Cloudflared / QUIC
+          fs.inotify.max_user_instances: 8192      # Watchdog
+          fs.inotify.max_user_watches: 1048576     # Watchdog
+          net.core.rmem_max: 67108864              # Cloudflared / QUIC
+          net.core.wmem_max: 67108864              # Cloudflared / QUIC
+          net.ipv4.neigh.default.gc_thresh2: 8192  # Prevent ARP cache overflows
+          net.ipv4.neigh.default.gc_thresh3: 16384 # Prevent ARP cache overflows
+          user.max_user_namespaces: 11255          # User namespaces
 
     # Mount openebs-hostpath in kubelet
     - |-
@@ -301,8 +310,6 @@ controlPlane:
       machine:
         udev:
           rules:
-            # Intel GPU
-            - SUBSYSTEM=="drm", KERNEL=="renderD*", GROUP="44", MODE="0660"
             # Zigbee Stick
             - SUBSYSTEMS=="usb", ATTRS{idVendor}=="10c4", ATTRS{idProduct}=="ea60", GROUP="20", MODE="0660", TAG+="uaccess"
 
