--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/postgresql.cnpg.io/cluster_v1.json
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
@@ -15,11 +14,7 @@ spec:
   superuserSecret:
     name: cloudnative-pg-secret
   enableSuperuserAccess: true
-  primaryUpdateMethod: switchover
-  # Note: Bootstrap is needed when recovering from an existing cnpg cluster
-  bootstrap:
-    recovery:
-      source: &previousCluster postgres16
+  primaryUpdateStrategy: unsupervised
   postgresql:
     parameters:
       max_connections: "600"
@@ -37,16 +32,17 @@ spec:
   monitoring:
     enablePodMonitor: true
   plugins:
-  - name: barman-cloud.cloudnative-pg.io
-    isWALArchiver: true
-    parameters:
-      barmanObjectName: postgres
-      serverName: postgres-v1
-
-  externalClusters:
-  - name: *previousCluster
-    plugin:
-      name: barman-cloud.cloudnative-pg.io
-      parameters:
+    - name: barman-cloud.cloudnative-pg.io
+      isWALArchiver: true
+      parameters: &parameters
         barmanObjectName: postgres
-        serverName: postgres16-v1
+        serverName: postgres-v1
+  # Note: Bootstrap is needed when recovering from an existing cnpg cluster
+  bootstrap:
+    recovery:
+      source: source
+  externalClusters:
+    - name: source
+      plugin:
+        name: barman-cloud.cloudnative-pg.io
+        parameters: *parameters
