--- a/kubernetes/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tautulli/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               tag: 2.15.3@sha256:3e0eaca8c082ebe121a0ae9125bea1b4e2d177fca34ac8df4ec14a28e62f63a4
             env:
               TZ: ${TZ}
-              TAUTULLI__PORT: &port 80
+              TAUTULLI_HTTP_PORT: &port 80
               TAUTULLI_HTTP_BASE_URL: https://tautulli.${SECRET_DOMAIN}
             resources:
               requests:
@@ -57,7 +57,7 @@ spec:
         controller: tautulli
         ports:
           http:
-            port: 80
+            port: *port
     ingress:
       app:
         className: external
