--- a/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/nextcloud/app/helmrelease.yaml
@@ -235,9 +235,7 @@ spec:
       existingClaim: *app
 
     cronjob:
-      enabled: true
-      securityContext:
-        runAsUser: 33
+      enabled: false
 
     hpa:
       enabled: false
