Add pg datasource

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -13,6 +13,8 @@ spec:
         admin-user: "{{ .GRAFANA_ADMIN_USER }}"
         admin-password: "{{ .GRAFANA_ADMIN_PASS }}"
         GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
+        HASS_POSTGRES_USER: "{{ .HASS_POSTGRES_USER }}"
+        HASS_POSTGRES_PASS: "{{ .HASS_POSTGRES_PASS }}"
   data:
     - secretKey: GRAFANA_ADMIN_USER
       sourceRef:
@@ -38,3 +40,19 @@ spec:
       remoteRef:
         key: 3a6a4796-6f02-45c3-b39e-067267b6ebfc
         property: oauth_client_secret
+    - secretKey: HASS_POSTGRES_USER
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: ade9622d-3723-4cc7-b2d7-c53ca02aa476
+        property: pg_user
+    - secretKey: HASS_POSTGRES_PASS
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: ade9622d-3723-4cc7-b2d7-c53ca02aa476
+        property: pg_password
