--- a/kubernetes/apps/default/govee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/default/govee2mqtt/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
           app:
             env:
               TZ: ${TZ}
-              GOVEE_MQTT_HOST: vernemq.databases.svc.cluster.local
+              GOVEE_MQTT_HOST: mosquitto.databases.svc.cluster.local
               GOVEE_MQTT_PORT: 1883
               GOVEE_TEMPERATURE_SCALE: C
               GOVEE_LAN_BROADCAST_ALL: true
