--- a/kubernetes/apps/databases/mosquitto/ks.yaml
+++ b/kubernetes/apps/databases/mosquitto/ks.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &appname mosquitto
-  namespace: &namespace database
+  namespace: &namespace databases
 spec:
   commonMetadata:
     labels:
