--- a/kubernetes/apps/databases/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/mosquitto/app/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
                   - ALL
     persistence:
       config:
-        existingClaim: "{{ .Release.Name }}-cache"
+        existingClaim: "{{ .Release.Name }}"
       config-file:
         type: configMap
         identifier: config
