--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -10,6 +10,7 @@
     "github>elcattivo66/home-ops//.renovate/grafanaDashboards.json5",
     "github>elcattivo66/home-ops//.renovate/groups.json5",
     "github>elcattivo66/home-ops//.renovate/labels.json5",
+    "github>elcattivo66/home-ops//.renovate/overrides.json5",
     "github>elcattivo66/home-ops//.renovate/packageRules.json5",
     "github>elcattivo66/home-ops//.renovate/semanticCommits.json5",
     ":automergeBranch",
