--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -59,6 +59,7 @@ spec:
     endpointRoutes:
       enabled: true
     envoy:
+      enabled: false
       rollOutPods: false
       prometheus:
         serviceMonitor:
