--- a/kubernetes/apps/default/prowlarr/ks.yaml
+++ b/kubernetes/apps/default/prowlarr/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: cloudnative-pg-cluster
       namespace: databases
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   path: ./kubernetes/apps/default/prowlarr/app
   prune: true
   sourceRef:
