--- a/kubernetes/apps/default/tandoor/ks.yaml
+++ b/kubernetes/apps/default/tandoor/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: cloudnative-pg-cluster
       namespace: databases
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
     - name: volsync
       namespace: volsync-system
     - name: rook-ceph-cluster
