--- a/kubernetes/apps/default/adventurelog/ks.yaml
+++ b/kubernetes/apps/default/adventurelog/ks.yaml
@@ -18,7 +18,7 @@ spec:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/adventurelog/app
