--- a/kubernetes/apps/default/govee2mqtt/ks.yaml
+++ b/kubernetes/apps/default/govee2mqtt/ks.yaml
@@ -11,7 +11,7 @@ spec:
     - name: multus-networks
       namespace: networking
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   commonMetadata:
     labels:
       app.kubernetes.io/name: *appname
