--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -21,7 +21,7 @@ spec:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
     - name: volsync
       namespace: volsync-system
   path: ./kubernetes/apps/default/home-assistant/app
