--- a/kubernetes/apps/default/paperless/ks.yaml
+++ b/kubernetes/apps/default/paperless/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: cloudnative-pg-cluster
       namespace: databases
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
     - name: keda
       namespace: monitoring
   path: ./kubernetes/apps/default/paperless/app
