--- a/kubernetes/apps/default/recyclarr/ks.yaml
+++ b/kubernetes/apps/default/recyclarr/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: volsync
       namespace: volsync-system
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
     - name: rook-ceph-cluster
       namespace: rook-ceph
   path: ./kubernetes/apps/default/recyclarr/app
