--- a/kubernetes/apps/monitoring/grafana/ks.yaml
+++ b/kubernetes/apps/monitoring/grafana/ks.yaml
@@ -8,7 +8,7 @@ spec:
   targetNamespace: monitoring
   dependsOn:
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   path: ./kubernetes/apps/monitoring/grafana/app
   prune: true
   sourceRef:
