--- a/kubernetes/apps/monitoring/unpoller/ks.yaml
+++ b/kubernetes/apps/monitoring/unpoller/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   path: ./kubernetes/apps/monitoring/unpoller/app
   prune: true
   sourceRef:
