--- a/kubernetes/apps/networking/external-dns/ks.yaml
+++ b/kubernetes/apps/networking/external-dns/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   path: ./kubernetes/apps/networking/external-dns/cloudflare
   prune: false
   sourceRef:
@@ -36,7 +36,7 @@ spec:
       app.kubernetes.io/name: *appname
   dependsOn:
     - name: external-secrets-stores
-      namespace: kube-system
+      namespace: external-secrets
   path: ./kubernetes/apps/networking/external-dns/unifi
   prune: false
   sourceRef:
